fixed logo letter spacing

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Spectral+SC:ital,wght@0,200;0,300;0,500;0,600;0,700;1,200;1,300;1,400;1,600;1,700;1,800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
+
 html {
   box-sizing: border-box;
   overflow-x: hidden;
@@ -41,6 +42,7 @@ a:hover {
   font-size: 1.7rem;
   max-height: 25vh;
   padding: 2rem 0 0 2rem;
+  letter-spacing: 0.25rem;
 }
 
 /* Card Video */
@@ -78,6 +80,7 @@ video {
   margin-top: 2rem;
 }
 
+/* Footer */
 #footerContainer {
   padding: 0 0 0 2rem;
   margin-top: 50vh;
@@ -87,11 +90,6 @@ video {
   justify-content: left;
   justify-content: space-between;
 }
-/* 
-#footerContainer a {
-  color:white;
-  font-weight: 300;
-} */
 
 #footerContainer p, #footerContainer a {
   color:#5A5A5A;
